src/main/algorithms/cpp/tree/lca_in_tree_2021_0303/error
In file included from solution.cpp:1:
In file included from ./../../head.h:4:
In file included from /Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/iostream:37:
In file included from /Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/ios:215:
In file included from /Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/__locale:14:
In file included from /Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/string:504:
In file included from /Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/string_view:175:
In file included from /Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/__string:57:
In file included from /Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/algorithm:643:
/Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/memory:1881:31: error: no matching constructor for initialization of 'Solution::Edge'
            ::new((void*)__p) _Up(_VSTD::forward<_Args>(__args)...);
                              ^
/Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/memory:1773:18: note: in instantiation of function template specialization 'std::__1::allocator<Solution::Edge>::construct<Solution::Edge>' requested here
            {__a.construct(__p, _VSTD::forward<_Args>(__args)...);}
                 ^
/Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/memory:1600:14: note: in instantiation of function template specialization 'std::__1::allocator_traits<std::__1::allocator<Solution::Edge> >::__construct<Solution::Edge>' requested here
            {__construct(__has_construct<allocator_type, _Tp*, _Args...>(),
             ^
/Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/vector:1045:23: note: in instantiation of function template specialization 'std::__1::allocator_traits<std::__1::allocator<Solution::Edge> >::construct<Solution::Edge>' requested here
      __alloc_traits::construct(this->__alloc(), _VSTD::__to_address(__tx.__pos_));
                      ^
/Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/vector:1126:9: note: in instantiation of member function 'std::__1::vector<Solution::Edge, std::__1::allocator<Solution::Edge> >::__construct_at_end' requested here
        __construct_at_end(__n);
        ^
solution.cpp:18:17: note: in instantiation of member function 'std::__1::vector<Solution::Edge, std::__1::allocator<Solution::Edge> >::vector' requested here
        edges = std::vector<struct Edge>(MAX_NODES * 2);
                ^
solution.cpp:6:12: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 0 were provided
    struct Edge {
           ^
solution.cpp:6:12: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 0 were provided
solution.cpp:11:9: note: candidate constructor not viable: requires at least 3 arguments, but 0 were provided
        Edge(int from_, int to_, int next_, int w_ = 1) : from(from_), to(to_), next(next_), w(w_) {
        ^
1 error generated.
